--- a/index.html
+++ b/index.html
@@ -5,7 +5,28 @@
     <title>Landing-Page</title>
 </head>
 <body>
+<div class="section1">
 
+
+</div>
+
+<div class="section2">
+
+
+</div>
     
+
+<div class="section3">
+
+
+</div>
+
+
+<div class="section4">
+
+
+</div>
+
+
 </body>
 </html>
