--- a/index.html
+++ b/index.html
@@ -5,28 +5,41 @@
     <title>Landing-Page</title>
 </head>
 <body>
-<div class="section1">
-
-
-</div>
-
-<div class="section2">
-
-
-</div>
-    
-
-<div class="section3">
-
-
-</div>
-
-
-<div class="section4">
-
-
-</div>
-
-
+    <div class="section1">
+        <div class="nav">
+            <ul>
+                <li><a href ="">header link one</a></li>
+                <li><a href ="">header link two</a></li>
+                <li><a href ="">header link three</a></li>
+            </ul>
+        </div>  
+        <h1> This website is awesome</h1>
+        <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
+        <button>Sign up</button>
+        <img src="" alt="image description">
+    </div>
+    <div class="section2">
+        <h2> Some random information.</h2>
+        <img src="" alt="image description">
+        <img src="" alt="image description">
+        <img src="" alt="image description">
+        <img src="" alt="image description">
+        <p>this is some subtext under an illustration or image</p>
+        <p>this is some subtext under an illustration or image</p>
+        <p>this is some subtext under an illustration or image</p>
+        <p>this is some subtext under an illustration or image</p>
+    </div>
+    <div class="section3">
+        <p>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
+        <p>-Thor, God of Thunder</p>
+    </div>
+    <div class="section4">
+        <h3>Call to action! It's time!</h3>
+        <p>Sign up for our product by clicking that button right over there!</p>
+        <button>Sign up</button>
+    </div>
 </body>
+<footer>
+    <p>Copyright © The Odin Project 2021</p>
+</footer>
 </html>
