--- a/index.html
+++ b/index.html
@@ -7,37 +7,59 @@
 </head>
 <body>
     <div class="section1">
-        <div class="nav">
-            <ul>
-                <li><a href ="">header link one</a></li>
-                <li><a href ="">header link two</a></li>
-                <li><a href ="">header link three</a></li>
-            </ul>
-        </div>  
-        <h1> This website is awesome</h1>
-        <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
-        <button>Sign up</button>
-        <img src="" alt="image description">
+        <div class="headline">
+            <div class="logo">
+                <img src="" alt="Logo">
+            </div>
+            <div class="nav">
+                    <a href ="">header link one</a>
+                    <a href ="">header link two</a>
+                    <a href ="">header link three</a>
+            </div>
+            <div class="header">
+                <div class="info"> 
+                    <h1> This website is awesome</h1>
+                    <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
+                    <button>Sign up</button>
+                </div>
+                <img class="image" src="" alt="image description">
+            </div>
+        </div>
     </div>
     <div class="section2">
         <h2> Some random information.</h2>
-        <img src="" alt="image description">
-        <img src="" alt="image description">
-        <img src="" alt="image description">
-        <img src="" alt="image description">
-        <p>this is some subtext under an illustration or image</p>
-        <p>this is some subtext under an illustration or image</p>
-        <p>this is some subtext under an illustration or image</p>
-        <p>this is some subtext under an illustration or image</p>
+        <div class="container">
+            <div class="image-text">
+                <img src="" alt="image description">
+                <p>this is some subtext under an illustration or image</p>
+            </div>
+            <div class="image-text">
+                <img src="" alt="image description">
+                <p>this is some subtext under an illustration or image</p>
+            </div>
+            <div class="image-text">
+                <img src="" alt="image description">
+                <p>this is some subtext under an illustration or image</p>
+            </div>
+            <div class="image-text">
+                <img src="" alt="image description">
+                <p>this is some subtext under an illustration or image</p>
+            </div>
+        </div>
+        
     </div>
     <div class="section3">
-        <p>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
-        <p>-Thor, God of Thunder</p>
+        <p class="quote">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
+        <p class="author">-Thor, God of Thunder</p>
     </div>
     <div class="section4">
-        <h3>Call to action! It's time!</h3>
-        <p>Sign up for our product by clicking that button right over there!</p>
-        <button>Sign up</button>
+        <div class="content">
+            <div class="b">
+                <h3>Call to action! It's time!</h3>
+                <p>Sign up for our product by clicking that button right over there!</p>
+            </div>
+            <button class="c">Sign up</button>
+        </div>
     </div>
 </body>
 <footer>
