Modified html file to style the webpage

--- a/index.html
+++ b/index.html
@@ -4,65 +4,67 @@
     <meta charset="UTF-8" />
     <title>Landing-Page</title>
     <link rel="stylesheet" href="style.css"/>
+    <link href="https://fonts.googleapis.com/css2?family=Cabin&family=Chewy&family=Finger+Paint&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="section1">
         <div class="headline">
             <div class="logo">
-                <img src="" alt="Logo">
+                <img src="./images/logo-1.png" alt="Dachshund logo">
+                <h1 >Bruno's Best Buddies PlayGroup</h1>
             </div>
             <div class="nav">
-                    <a href ="">header link one</a>
-                    <a href ="">header link two</a>
-                    <a href ="">header link three</a>
+                    <a href ="">Homepage</a>
+                    <a href ="">Information</a>
+                    <a href ="">Gallery</a>
             </div>
-            <div class="header">
-                <div class="info"> 
-                    <h1> This website is awesome</h1>
-                    <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
-                    <button>Sign up</button>
-                </div>
-                <img class="image" src="" alt="image description">
+        </div>
+        <div class="header">
+            <div class="info"> 
+                <p>Welcome buddies! I'm Bruno, the chocolate and tan "good boy" dachshund. If there's one thing I've mastered, it's the art of playtime. Whether it's fetch, tag, or a friendly wrestle, I'm always game. And guess what? I run the coolest playgroup in town where anyone is welcome!</p>
+                <button>Sign up</button>
             </div>
+            <img class="image" src="./images/bruno.jpg" alt="Bruno dachsund">
         </div>
     </div>
     <div class="section2">
-        <h2> Some random information.</h2>
+        <h2>The Playgroup Experience</h2>
         <div class="container">
             <div class="image-text">
-                <img src="" alt="image description">
-                <p>this is some subtext under an illustration or image</p>
+                <img src="./images/play1.jpg" alt="First day at puppy playgroup">
+                <p>Some will be nervous, just like me here on my first day, but pawsie on heart, I promise it'll be fun!</p>
             </div>
             <div class="image-text">
-                <img src="" alt="image description">
-                <p>this is some subtext under an illustration or image</p>
+                <img src="./images/play2.jpg" alt="Toys at puppy playgroup">
+                <p>We have lots and lots of toys to play with, this one is my favourite though!</p>
             </div>
             <div class="image-text">
-                <img src="" alt="image description">
-                <p>this is some subtext under an illustration or image</p>
+                <img src="./images/play3.jpg" alt="Dog on beach">
+                <p>Sometimes we have special events, where we get to go to the beach... ooh i love the beach!</p>
             </div>
             <div class="image-text">
-                <img src="" alt="image description">
-                <p>this is some subtext under an illustration or image</p>
+                <img src="./images/play4.jpg" alt="Dogs playing chase">
+                <p>There will be plenty of friends around to play chase with. This one never caught up to me!</p>
             </div>
         </div>
         
     </div>
     <div class="section3">
-        <p class="quote">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
-        <p class="author">-Thor, God of Thunder</p>
+        <p class="quote">"Life's a stretch when you're a dachshund like me, but I always manage to find the chocolatey sweetness in every adventure!" </p>
+        <p class="author">-Bruno the Chocolate and Tan Dachshund</p>
     </div>
     <div class="section4">
         <div class="content">
-            <div class="b">
-                <h3>Call to action! It's time!</h3>
-                <p>Sign up for our product by clicking that button right over there!</p>
+            <div class="join">
+                <h3>Calling my fellow good boys and girls!</h3>
+                <p>Sign up for my playgroup now by clicking that button right over there!</p>
             </div>
-            <button class="c">Sign up</button>
+            <button class="button">Sign up</button>
         </div>
     </div>
+    <footer>
+        <p>Copyright © Bruno's Best Buddies PlayGroup 2023</p>
+    </footer>
 </body>
-<footer>
-    <p>Copyright © The Odin Project 2021</p>
-</footer>
+
 </html>
