Modified html and css to amend font size error

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8" />
-    <title>Landing-Page</title>
+    <title>Homepage</title>
     <link rel="stylesheet" href="style.css"/>
     <link href="https://fonts.googleapis.com/css2?family=Cabin&family=Chewy&family=Finger+Paint&display=swap" rel="stylesheet">
 </head>
@@ -14,9 +14,9 @@
                 <h1 >Bruno's Best Buddies PlayGroup</h1>
             </div>
             <div class="nav">
-                    <a href ="">Homepage</a>
-                    <a href ="">Information</a>
-                    <a href ="">Gallery</a>
+                    <a href ="index.html">Homepage</a>
+                    <a href ="information.html">Information</a>
+                    <a href ="gallery.html">Gallery</a>
             </div>
         </div>
         <div class="header">
