Added all media files, including these in the HTML code, finalised code on HTML and CSS, adding animations, media and the remaining styling and text. Also added to the README.md file a decsription of the website and features.

--- a/gallery.html
+++ b/gallery.html
@@ -14,9 +14,18 @@
                 <h1 >Bruno's Best Buddies PlayGroup</h1>
             </div>
             <div class="nav">
+                <div class="text-image">
                     <a href ="index.html">Homepage</a>
+                    <img src="./images/image.png" alt="Moving Image" class="moving-image">
+                    </div>
+                    <div class="text-image">
                     <a href ="information.html">Information</a>
+                    <img src="./images/image.png" alt="Moving Image" class="moving-image">
+                    </div>
+                    <div class="text-image">
                     <a href ="gallery.html">Gallery</a>
+                    <img src="./images/image.png" alt="Moving Image" class="moving-image">
+                    </div>
             </div>
         </div>
         <div class="header">
@@ -29,12 +38,67 @@
     </div>
     <div class="section2">
         <h2>Gallery</h2>
+        <div class="gallery">
 
-        <img class="gallery" src="./images/playgroup.jpeg" alt="PlayGroup Field">
+            <div class="gallery-item">
+                <img class="gallery" src="./images/playgroup5.jpg" alt="Dog playing with ball toy">
+            </div>
 
-        
+            <div class="gallery-item">
+                <img class="gallery" src="./images/playgroup6.jpg" alt="Three dachshunds">
+            </div>
+
+            <div class="gallery-item">
+                <img class="gallery" src="./images/playgroup8.jpg" alt="Photography of dogs">
+            </div>
+
+
+            <div class="gallery-item">
+                <video controls>
+                    <source src="./images/video1.mov" type="video/mp4">
+                    Your browser does not support the video tag.
+                </video>
+            </div>
+
+            <div class="gallery-item">
+                <video controls>
+                    <source src="./images/video2.mov" type="video/mp4">
+                    Your browser does not support the video tag.
+                </video>
+
+            </div>
+
+            <div class="gallery-item">
+                <video controls>
+                    <source src="./images/video3.mov" type="video/mp4">
+                    Your browser does not support the video tag.
+                </video>
+            </div>
+
+            <div class="gallery-item">
+
+                <img class="gallery" src="./images/playgroup2.jpg" alt="Dog on playgroup stand">
+            </div>
+            <div class="gallery-item">
+                <img class="gallery" src="./images/playgroup.jpeg" alt="PlayGroup Field">
+            </div>
+
+            <div class="gallery-item">
+                <img class="gallery" src="./images/playgroup3.jpg" alt="PlayGroup Field with toys">
+            </div>
+
+
+        </div>
+
+
     </div>
+
     <div class="section3">
+        <p class="quote">"Every paw-trait tells a tail-wagging story, and in my doggy playgroup, every moment is an exciting adventure!" </p>
+        <p class="author">-Bruno the Chocolate and Tan Dachshund</p>
+    </div>
+
+    <div class="section4">
         <div class="content">
             <div class="join">
                 <h3>Calling my fellow good boys and girls!</h3>
@@ -44,7 +108,7 @@
         </div>
     </div>
     <footer>
-        <p>Copyright © Bruno's Best Buddies PlayGroup 2023</p>
+        <p>Bruno's Best Buddies PlayGroup 2023</p>
     </footer>
 </body>
 
