--- a/index.html
+++ b/index.html
@@ -14,9 +14,18 @@
                 <h1 >Bruno's Best Buddies PlayGroup</h1>
             </div>
             <div class="nav">
+                    <div class="text-image">
                     <a href ="index.html">Homepage</a>
+                    <img src="./images/image.png" alt="Moving Image" class="moving-image">
+                    </div>
+                    <div class="text-image">
                     <a href ="information.html">Information</a>
+                    <img src="./images/image.png" alt="Moving Image" class="moving-image">
+                    </div>
+                    <div class="text-image">
                     <a href ="gallery.html">Gallery</a>
+                    <img src="./images/image.png" alt="Moving Image" class="moving-image">
+                    </div>
             </div>
         </div>
         <div class="header">
@@ -52,6 +61,7 @@
     <div class="section3">
         <p class="quote">"Life's a stretch when you're a dachshund like me, but I always manage to find the chocolatey sweetness in every adventure!" </p>
         <p class="author">-Bruno the Chocolate and Tan Dachshund</p>
+    </div>
     </div>
     <div class="section4">
         <div class="content">
