--- a/information.html
+++ b/information.html
@@ -14,9 +14,18 @@
                 <h1 >Bruno's Best Buddies PlayGroup</h1>
             </div>
             <div class="nav">
+                <div class="text-image">
                     <a href ="index.html">Homepage</a>
+                    <img src="./images/image.png" alt="Moving Image" class="moving-image">
+                    </div>
+                    <div class="text-image">
                     <a href ="information.html">Information</a>
+                    <img src="./images/image.png" alt="Moving Image" class="moving-image">
+                    </div>
+                    <div class="text-image">
                     <a href ="gallery.html">Gallery</a>
+                    <img src="./images/image.png" alt="Moving Image" class="moving-image">
+                    </div>
             </div>
         </div>
         <div class="header">
@@ -30,12 +39,12 @@
     <div class="section2">
         <h2>Information</h2>
 
-        <p>The Playground: Picture a canine paradise with all the toys, tunnels, and tails you can imagine! Our playgroup has a specially designed playground where we can run, chase, and explore to our heart's content.</p>
-        <p>Diverse Membership: We've got every breed, size, and personality under the sun. From the tiniest Chihuahuas to the mightiest Great Danes, we're a melting pot of fur, and we love it that way. Diversity is our strength!</p>
-        <p>Pawesome Bonds: Our playgroup isn't just about physical activity; it's where friendships are forged. We've got a secret recipe for creating the strongest doggy bonds - it involves chasing squirrels together, tugging on ropes, and lots of slobbery kisses.</p>
-        <p>Capture the Moments: Every epic playdate is documented, thanks to our trusty human photographers. There's a dedicated Instagram page where you can see our adventures in action and follow our journey. Don't forget to hit that "like" button!</p>
-        <p>Playgroup Awards: Yes, you heard it right! We have monthly awards for categories like "Most Enthusiastic Tail Wagger," "Fastest Fetcher," and even "Best Newcomer." It's a friendly competition that adds an extra sprinkle of excitement to our playdates.</p>
-        <p>Special Events: Birthdays, holidays, and special occasions are celebrated with extra flair. Think doggy birthday cakes, Halloween costume parties, and even a "Paws in the Park" picnic extravaganza. Our calendar is packed with fun!</p>
+        <p>The playground is a doggy paradise with all the toys, tunnels, and tails you can imagine! My playgroup has a specially designed playground where we can run, chase, and explore to the max.</p>
+        <p>We've got every breed, size, and personality there is. From the tiniest Chihuahuas to the biggest Great Danes, we're a mix of fur, and we love it.</p>
+        <p>Our playgroup isn't just about physical activity; it's where friendships for life are made. This is where we create the strongest doggy bonds - it involves chasing squirrels together, tugging on ropes, and lots of slobbery kisses.</p>
+        <p>Every playdate is documented, thanks to my trusty human photographers. Some of these are added to our gallery - go check it out! </p>
+        <p>We have monthly awards for categories like "Champion of Chase," "Fastest Fetcher," and even "Best Newcomer." It's a friendly competition that adds an extra sprinkle of excitement to our playdates.</p>
+        <p>All special events and occasions are celebrated with extra style. Think doggy cakes, beach birthdays, and even a "Paws in the Park" picnic. The calendar is packed with doggy fun!</p>
         
     </div>
     <div class="section3">
